message("Building configuration: ${CMAKE_BUILD_TYPE}")
#message("CMAKE_CXX_FLAGS: ${CMAKE_CXX_FLAGS}")
#message("CMAKE_CXX_FLAGS_DEBUG: ${CMAKE_CXX_FLAGS_DEBUG}")
#message("CMAKE_CXX_FLAGS_RELEASE: ${CMAKE_CXX_FLAGS_RELEASE}")
cmake_minimum_required(VERSION 2.8)
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_DEBUG} -g -DDEBUG=1 -UNDEBUG -O0 -DYYDEBUG=1")
	set (BISON_CFLAGS "${BISON_CFLAGS} --verbose")
#endif()
#if(CMAKE_BUILD_TYPE STREQUAL "Release")
else()
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_RELEASE} -DNDEBUG=1 -UDEBUG -O3")
endif()
add_subdirectory(yaml-cpp EXCLUDE_FROM_ALL)
add_subdirectory(dft2lnt)
add_subdirectory(dft2lntc)
add_subdirectory(dftcalc)
add_subdirectory(dfttest)
add_subdirectory(share)
